[package]
name = "dek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.0.0"
logos = "0.13.0"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.48"
type-map = "0.5.0"
