[package]
name = "dek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
thiserror = "1.0.48"
miette = { version = "5.10.0", features = ["fancy"] }

# Data structures
indexmap = "2.0.0"
type-map = "0.5.0"

# Arbitrary precision arithmetic
malachite = "0.4.0"

# Parsing
logos = "0.13.0"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.0"
